# bitothello

./: Cargo.toml  README.md  USAGE.md
src/: ai.rs  board.rs  main.rs  player.rs  test_graphs.rs
src/gui/: app.rs  game_view.rs  japanese.rs  mod.rs  plot_viewer.rs
src/stats/: game_stats.rs  mod.rs  plotter.rs
